[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Levels/Level Components/Organism.gd" type="Script" id=1]
[ext_resource path="res://Assets/Organism/Organism_Game_Field_Placeholder.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Organism/Game_Organism_Bar_Progress.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Organism/Game_Organism_Bar.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Tiles/Tile_Water.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Frick_Regular.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/UI/Tiles/Tile_Berry.png" type="Texture" id=7]

[node name="Organism" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="Mana_Bar" type="TextureProgress" parent="."]
margin_left = -239.977
margin_top = 214.898
margin_right = 333.023
margin_bottom = 388.898
step = 0.01
value = 38.9
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.129852, 0.824921, 0.898438, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mana_Text" type="RichTextLabel" parent="."]
margin_left = -78.5992
margin_top = 124.174
margin_right = 421.401
margin_bottom = 366.173
rect_scale = Vector2( 0.947225, 0.947225 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
tab_size = 0
text = "1/4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mana_Icon" type="Sprite" parent="."]
position = Vector2( -245.362, 305.755 )
scale = Vector2( 0.482615, 0.482615 )
texture = ExtResource( 5 )

[node name="Berry_Control" type="Control" parent="."]
visible = false
margin_left = -136.661
margin_right = -96.6606
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Berry_Icon" type="Sprite" parent="Berry_Control"]
position = Vector2( -204.153, -326.663 )
scale = Vector2( 0.509961, 0.509961 )
texture = ExtResource( 7 )

[node name="Evolve_Text" type="Button" parent="Berry_Control"]
margin_left = -31.7839
margin_top = -411.072
margin_right = 683.216
margin_bottom = -225.072
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.831373, 0.698039, 0.0313726, 1 )
text = "Evolve"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boost_Text" type="Button" parent="Berry_Control"]
visible = false
margin_left = -31.7839
margin_top = -413.191
margin_right = 683.216
margin_bottom = -227.191
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.831373, 0.698039, 0.0313726, 1 )
text = "Boost"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
